# Software

./: .gitignore  .gitmodules  AUTHORS  CHANGELOG  CHANGELOG.txt  CMakeLists.txt  CROSSCOMPILING.MD  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross  Makefile  README.md  TESTING.MD  TODO.md  TODO.txt  Vagrantfile  docker-compose.yml  dockerfile  jol.txt  meson.build  myNewFile.txt  pyproject.toml  radsat-sk2.py  release-checklist.md
.cargo/: config.toml
CubeSat/: Cargo.toml  build
contrib/zephyr/: CMakeLists.txt
examples/: CMakeLists.txt  autoconfig.rs  csp_server_client.c  csp_server_client.py  hello.cpp  meson.build  zmqproxy.c
kubos/apis/gomspace-p31u-api/: Cargo.toml
kubos/apis/gomspace-p31u-api/src/: eps.rs
kubos/apis/novatel-oem7-api/: Cargo.toml
kubos/apis/novatel-oem7-api/src/: crc32.rs  lib.rs  messages.rs  oem7.rs
kubos/apis/telemetry-db-api/: Cargo.toml
kubos/apis/telemetry-db-api/src/: lib.rs  models.rs
kubos/examples/python-service/: pyproject.toml
kubos/libs/kubos/: pyproject.toml
kubos/libs/kubos-service/: README.md  pyproject.toml
kubos/libs/kubos-service/kubos_service/: http_service.py
kubos/libs/radsat-csp/: Cargo.toml  README.md  build.rs
kubos/libs/radsat-csp/csp-config/: autoconfig.rs
kubos/libs/radsat-csp/src/: capture_iface.c  lib.rs
kubos/services/app-service/: Cargo.toml  README.md
kubos/services/app-service/src/: error.rs  main.rs  monitor.rs  objects.rs  registry.rs  schema.rs
kubos/services/app-service/src/tests/: mod.rs  register_app.rs  set_version.rs  upgrade_app.rs
kubos/services/app-service/tests/: test_kill.rs  test_rust_app.rs  test_uninstall.rs
kubos/services/app-service/tests/utils/: mod.rs
kubos/services/clyde-3g-eps-service/: Battery.md  Cargo.toml
kubos/services/clyde-3g-eps-service/src/: main.rs
kubos/services/clyde-3g-eps-service/src/models/: battery_telemetry.rs  board_status.rs  daughterboard_telemetry.rs  last_error.rs  mod.rs  motherboard_telemetry.rs  reset_telemetry.rs  subsystem.rs  version.rs
kubos/services/clyde-3g-eps-service/src/schema/: mutation.rs  query.rs
kubos/services/clyde-3g-eps-service/src/tests/: mod.rs
kubos/services/kubos-service/: Cargo.toml  README.md
kubos/services/kubos-service/src/: lib.rs  macros.rs  service.rs
kubos/services/local-comms-service/: Cargo.toml
kubos/services/local-comms-service/src/: comms.rs  main.rs
kubos/services/novatel-oem6-service/: Cargo.toml
kubos/services/novatel-oem6-service/src/: main.rs  model.rs  objects.rs  schema.rs
kubos/services/novatel-oem6-service/src/tests/: mod.rs
kubos/services/scheduler-service/: Cargo.toml  test_config.toml
kubos/services/scheduler-service/src/: app.rs  error.rs  main.rs  mode.rs  scheduler.rs  schema.rs  task.rs  task_list.rs
kubos/services/scheduler-service/tests/: activate_mode.rs  create_mode.rs  import.rs  import_raw.rs  import_validation.rs  init.rs  onetime.rs  recurring.rs  remove.rs
kubos/services/scheduler-service/tests/util/: mod.rs
kubos/services/telemetry-service/: Cargo.toml  README.md
kubos/services/telemetry-service/src/: main.rs  schema.rs
kubos/services/telemetry-service/tests/: test_delete.rs  test_empty_db.rs  test_filter_parameter.rs  test_filter_subsystem.rs  test_filter_timestamp.rs  test_insert.rs  test_insert_bulk.rs  test_limit.rs  test_ping.rs  test_route.rs  test_select_all.rs  test_udp.rs
kubos/tools/: local_config.toml  pyproject.toml
kubos/utils/: Cargo.toml
kubos/utils/src/: testing.rs
mission-applications/antenna-deployment/: Cargo.toml  manifest.toml
mission-applications/antenna-deployment/obc-tests/: README.md  build.sh  package.sh  run.sh
mission-applications/antenna-deployment/src/: deployment.rs  gpio.rs  main.rs  state.rs
mission-applications/antenna-deployment/target-local/: .rustc_info.json
mission-applications/first-test-application/: Cargo.toml  manifest.toml
services/bus-services/cube-adcs-service/: Cargo.toml
services/bus-services/cube-adcs-service/src/: lib.rs  main.rs  schema.rs  schema_generated.rs  subsystem.rs  tests.rs
services/comms-cli/: Cargo.toml  README.md
services/comms-cli/src/: main.rs
services/comms-services/: Cargo.toml  GROUND_STATION.md  README.md  config.toml  fix.sh
services/comms-services/obc-tests/: README.md  build.sh  csp_scan_with_morse.sh  package.sh  run.sh  scan_csp_addresses.sh
services/comms-services/obc-tests/config/: comms-hw.toml
services/comms-services/obc-tests/requests/: 01_telemetry.json  02_health.json  03_radio_health_uplink.json  04_radio_health_downlink.json  10_radio_ping_uplink.json  11_radio_ping_downlink.json  12_radio_uptime_uplink.json  13_radio_uptime_downlink.json  14_radio_status_uplink.json  15_radio_status_downlink.json  16_radio_ident_uplink.json  17_radio_ident_downlink.json  18_radio_interface_uplink_radio.json  19_radio_interface_downlink_radio.json  20_radio_system_stats_uplink.json  21_radio_system_stats_downlink.json  30_send_text_morse_downlink.json  31_send_compressed_morse_downlink.json  32_send_ax25_text_downlink.json  33_send_ax25_hex_downlink.json  90_reboot_uplink.json  91_reboot_downlink.json
services/comms-services/src/: config.rs  csp_interface.rs  lib.rs  main.rs  model.rs  nmp_control.rs  nxtrx_comms.rs  radio_control.rs  schema.rs
services/cube-adcs-service/: Cargo.toml  build.rs  local_config.toml
services/cube-adcs-service/src/: csp_wrapper.rs  main.rs  schema.rs
src/: .gitignore  CMakeLists.txt  csp_rtable_cidr.c  csp_server_client.c  csp_services.c  lib.rs  main.cpp
src/arch/posix/: pthread_queue.c
src/arch/zephyr/: csp_hooks.c
src/classes/: CANDevice.cpp  CANDevice.h  SPIDevice.h
src/classes/Util/GPIO/: GPIO.cpp  GPIO.h
src/drivers/: testSockCanCpp.cpp
src/drivers/can/: can_socketcan.c
src/interfaces/: csp_if_can.c  csp_if_kiss.c  csp_if_zmqhub.c
src/src/: CANDevice.cpp  CMakeLists.txt  I2CDevice.h  main.cpp
src/src/Core/: CMakeLists.txt
src/src/Core/include/: Core.h  GPIO.h
src/src/Core/src/: GPIO.cpp
src/src/Util/: CMakeLists.txt
src/src/Util/include/: File.h
src/src/Util/src/: File.cpp
(+556 files in other folders)
