[workspace]
members = [
    "libcsp-cargo-build",
    "examples"
]
default-members = ["examples"]
resolver = "2"

[package]
name = "libcsp"
version = "0.1.3"
edition = "2021"
authors = ["Robin Mueller <muellerr@irs.uni-stuttgart.de>"]
description = "Safe and ergonomic Rust API for libcsp on top on libcsp-sys"
homepage = "https://egit.irs.uni-stuttgart.de/rust/libcsp-rust"
repository = "https://egit.irs.uni-stuttgart.de/rust/libcsp-rust"
license = "Apache-2.0"
keywords = ["no-std", "space", "aerospace", "ffi", "csp"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["aerospace", "external-ffi-bindings", "no-std", "hardware-support", "embedded"]

[dependencies]
bitflags = "2"
num_enum = "0.7"
libc = "0.2"
libcsp-sys = { version = "0.1", path = "libcsp-sys" }
