[project]
name = "kubos-tools"
version = "0.1.0"
description = "Documentation and development tools for KubOS"
authors = [{name = "Marshall Culpepper", email = "marshall@xplore.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Sphinx>=5.3.0",
    "sphinx-rtd-theme>=1.1.1",
    "sphinxcontrib-plantuml>=0.24",
    "semantic-version>=2.10.0",
    "breathe>=4.34.0",
    "kubos",
    "kubos-service",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kubos = { workspace = true }
kubos-service = { workspace = true }
