[package]
name = "utils"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>"]
edition = "2018"

[dependencies]
env_logger = "0.9"
log = "^0.4.0"
tempfile = "3"
reqwest = { version = "0.12.20", features = ["json", "blocking"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
warp = "0.1.12"

[package.metadata.release]
release = false
