[package]
name = "antenna-deployment"
edition = "2024"
version.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
failure = "0.1.2"
# Keep FRAM GraphQL calls in the crate's stdlib-only client to avoid
# reintroducing an OBC runtime dependency on OpenSSL-linked HTTP code.
kubos-app = { path = "../../kubos/apis/app-api/rust" }
log = "^0.4.0"
serde_json = "1"

[package.metadata.release]
release = false
