[package]
name = "first-test-application"
version = "0.1.0"
authors = [
    "Catherine Garabedian <catherine@kubos.co>",
    "Oren Rotaru <oren.rotaru@usask.ca>",
]
edition = "2018"

[dependencies]
failure = "0.1.2"
getopts = "0.2"
kubos-app = { path = "../../kubos/apis/app-api/rust" }
log = "^0.4.0"

[package.metadata.release]
release = false
