[package]
name = "comms-cli"
edition = "2024"
version.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.12", default-features = false }

[dev-dependencies]
async-graphql = "7.0.17"
comms-services = { path = "../comms-services" }
futures = "0.3"
