[package]
name = "comms-services"
edition = "2024"
version.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aes-gcm = { workspace = true }
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
log = "^0.4.0"
thiserror = "2.0"
toml = "0.4.10"

kubos-comms = { path = "../../kubos/libs/kubos-comms" }
kubos-service = { path = "../../kubos/services/kubos-service" }
nxtrx4-api = { path = "../../kubos/apis/nxtrx4-api" }
radsat-csp = { path = "../../kubos/libs/radsat-csp", features = ["i2c"] }

[dev-dependencies]
tempfile = "3"
