[package]
name = "cube-adcs-service"
version = "0.1.0"
edition = "2024"


[dependencies]
kubos-service = { path = "../../kubos/services/kubos-service" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
juniper = "0.16.1"
libcsp = { git = "https://egit.irs.uni-stuttgart.de/rust/libcsp-rust.git", package = "libcsp" }
libc = "0.2"


[build-dependencies]
bindgen = "0.69"
libcsp-cargo-build = { git = "https://egit.irs.uni-stuttgart.de/rust/libcsp-rust.git", package = "libcsp-cargo-build" }
cc = "1.2.21"