[project]
name = "python-service"
version = "0.1.0"
description = "Example Python Service for KubOS"
authors = []
requires-python = ">=3.8"
dependencies = [
    "kubos",
    "kubos-service",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kubos = { workspace = true }
kubos-service = { workspace = true }
