[project]
name = "kubos-service"
version = "1.22.0"
description = "GraphQL Service Framework for KubOS"
authors = [{name = "Marshall Culpepper", email = "marshall@xplore.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "toml>=0.10.2",
    "graphene>=3.1.1",
    "flask>=2.2.2",
    "graphql-server[flask]>=3.0.0b5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kubos_service"]
