[project]
name = "kubos"
version = "1.22.0"
description = "KubOS Python Libraries"
authors = [{name = "Marshall Culpepper", email = "marshall@xplore.com"}]
requires-python = ">=3.8"
dependencies = [
    "kubos-app",
    "kubos-service",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kubos"]

[tool.uv.sources]
kubos-app = { workspace = true }
kubos-service = { workspace = true }
