[package]
name = "kubos-app-service"
version = "0.1.0"
authors = [
    "Marshall Culpepper <marshall@kubos.com>",
    "Catherine Garabedian <catherine@kubos.com>",
]
edition = "2018"

[dependencies]
kubos-app = { path = "../../apis/app-api/rust" }
kubos-service = { path = "../kubos-service" }

anyhow = "1.0.97"
chrono = "0.4"
thiserror = "1.0.69"
fs_extra = "1.1.0"
async-graphql = "7.0.16"
log = "^0.4.0"
nix = "0.11.0"
serde = "1.0"
serde_json = "1.0.140"
serde_derive = "1.0"
toml = "0.4"
uuid = { version = "0.6", features = ["v4"] }
tempfile = "3"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
radsat-system = { path = "../../apis/system-api" }
ureq = { version = "2.12.1", features = ["json"] }
serde_json = "1.0.140"
axum = "0.8.4"
tower = "0.5"
async-graphql-axum = "7.0.17"

[package.metadata.release]
release = false
