[package]
name = "clyde-3g-eps-service"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>", "Catherine Garabedian <catherine@kubos.co>"]
edition = "2018"

[dependencies]
clyde-3g-eps-api = { path = "../../apis/clyde-3g-eps-api" }
eps-api = { path = "../../apis/eps-api" }
async-graphql = "7.0.16"
async-graphql-axum = "7.0.17"
thiserror = "1.0"

kubos-service = { path = "../kubos-service" }
log = "^0.4.0"
rust-i2c = { path = "../../hal/rust-hal/rust-i2c" }

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.10"
lazy_static = "1.1.0"
warp = "0.3"
futures = "0.3"


[package.metadata.release]
release = false
