[package]
name = "novatel-oem6-service"
version = "0.1.0"
authors = ["Catherine Garabedian <catherine@kubos.co>"]
edition = "2018"

[features]
nos3 = ["novatel-oem6-api/nos3"]

[dependencies]
async-graphql = "7.0.16"
anyhow = "1.0"
kubos-service = { path = "../kubos-service" }
log = "^0.4.0"
novatel-oem6-api = { path = "../../apis/novatel-oem6-api" }

[dev-dependencies]
serde_json = "1.0.10"

[package.metadata.release]
release = false
