[package]
name = "scheduler-service"
version = "0.2.0"
authors = ["Ryan Plauche <ryan@kubos.co>", "Oren Rotaru <oren.rotaru@usask.ca>"]
edition = "2018"

[dependencies]
chrono = "0.4.7"
thiserror = "1.0.69"
async-graphql = "7.0.16"
kubos-service = { path = "../kubos-service" }
log = "^0.4.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
syslog = "4.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3.0"
utils = { path = "../../utils" }

[package.metadata.release]
release = false
