[package]
name = "telemetry-service"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>", "Andrew Cantino <andrew@kubos.co>"]
edition = "2018"

[dependencies]
diesel = { version = "2.2.8", features = ["sqlite"] }
env_logger = "0.11.7"
flate2 = "1.0"
async-graphql = "7.0.16"
kubos-service = { path = "../kubos-service" }
kubos-telemetry-db = { path = "../../apis/telemetry-db-api" }
log = "^0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tar = "0.4"
time = "0.1"

[dev-dependencies]
reqwest = "0.9.9"
tempfile = "3"

[package.metadata.release]
release = false
