[package]
name = "cube-adcs-service"
edition = "2024"
version.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-graphql = "7.0.17"
log = "^0.4.0"
thiserror = "2.0"

cubespace-adcs-api = { path = "../../../kubos/apis/cubespace-adcs-api" }
kubos-service = { path = "../../../kubos/services/kubos-service" }
rust-can = { path = "../../../kubos/hal/rust-hal/rust-can" }
